fixed logo and spacing

--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ body {
 }
 
 .nav-item {
-  padding: 1% 2%;
+  text-decoration: none;
+  padding: 2% 2%;
   margin: 0%;
   display: flex;
   justify-content: center;
@@ -34,7 +35,7 @@ body {
   position: absolute;
   top: 0px;
   left: 0px;
-  padding: 0px 10px;
+  padding: 10px 10px;
   width: 40px;
   height: auto;
 
